gtk-4.0/gtk.css
/* ... */
    .sidebar.source-list.view, iconview.sidebar.source-list {
      transition: all .12s ease-in; }
      .sidebar.source-list.view:selected, iconview.sidebar.source-list:selected {
        background-color: #f7b922;
        color: #fefefe; }
        .sidebar.source-list.view:selected:active, iconview.sidebar.source-list:selected:active {
          box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5); }
        .sidebar.source-list.view:selected.has-open-popup, iconview.sidebar.source-list:selected.has-open-popup, .sidebar.source-list.view:selected:hover, iconview.sidebar.source-list:selected:hover {
          background-color: rgba(247, 185, 34, 0.9); }
        .sidebar.source-list.view:selected:backdrop, iconview.sidebar.source-list:selected:backdrop {
          background-color: rgba(247, 185, 34, 0.6); }
      .sidebar.source-list.view:hover, iconview.sidebar.source-list:hover, .sidebar.source-list.view iconview.source-list:hover, iconview.sidebar.source-list iconview.source-list:hover {
        background-color: rgba(0, 0, 0, 0.13); }
  paned .sidebar.left, paned .sidebar.right, paned .sidebar.left:dir(rtl), paned .sidebar:dir(rtl), paned .sidebar:dir(ltr), paned .sidebar {
    border-style: none;
    border-color: rgba(0, 0, 0, 0.13); }

stacksidebar row {
  padding: 10px 4px; }
  stacksidebar row > label {
    padding-left: 6px;
    padding-right: 6px; }
  stacksidebar row.needs-attention > label {
    background-size: 6px 6px, 0 0; }

/*******************************************************************/
/*                  PLACESSIDEBAR                                  */
/*******************************************************************/
/*--*/
placessidebar {
  background-color: transparent;
  background-image: linear-gradient(to right, #151519 40px, #191a1f 35px, #191a1f 36px, #191a1f 36px, #191a1f 99%, #191a1f 100%); }
  placessidebar row {
    padding: 2px 11px; }
    placessidebar row.sidebar-row {
      margin: 0;
      border-radius: 0; }
      placessidebar row.sidebar-row label {
        color: #98abb2;
        padding-left: 30px; }
      placessidebar row.sidebar-row.sidebar-row .sidebarrow-icon {
        color: #98abb2; }
      placessidebar row.sidebar-row:hover {
        transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
        color: rgba(0, 0, 0, 0.76);
        background-color: transparent;
        /*rgba(65,67,75,0.4); */
        background-image: linear-gradient(to right, #1b232d 40px, #25262d 40px, #25262d 97%); }
      placessidebar row.sidebar-row:selected {
        color: #fff;
        background-color: transparent;
        background-image: linear-gradient(to right, #f7b922 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
        placessidebar row.sidebar-row:selected label {
          color: #f7b922; }
        placessidebar row.sidebar-row:selected:backdrop {
          color: #fefefe;
          background-color: transparent;
          background-image: linear-gradient(to right, rgba(247, 185, 34, 0.6) 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
          placessidebar row.sidebar-row:selected:backdrop label {
            color: rgba(247, 185, 34, 0.6); }
        placessidebar row.sidebar-row:selected .sidebarrow-icon {
          -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
          color: inherit; }
      placessidebar row.sidebar-row.sidebar-new-bookmark-row, placessidebar row.sidebar-row.sidebar-new-bookmark-row label, placessidebar row.sidebar-row.sidebar-new-bookmark-row .sidebar-icon {
        color: #fadd00; }
      placessidebar row.sidebar-row:drop(active):not(:disabled) {
        box-shadow: inset 0 1px #71f79f, inset 0 -1px #71f79f; }
        placessidebar row.sidebar-row:drop(active):not(:disabled), placessidebar row.sidebar-row:drop(active):not(:disabled) label, placessidebar row.sidebar-row:drop(active):not(:disabled) image {
          color: #71f79f; }
        placessidebar row.sidebar-row:drop(active):not(:disabled):selected {
          background: #71f79f; }
          placessidebar row.sidebar-row:drop(active):not(:disabled):selected, placessidebar row.sidebar-row:drop(active):not(:disabled):selected label, placessidebar row.sidebar-row:drop(active):not(:disabled):selected image {
            color: #fefefe; }
  placessidebar list {
    background-color: transparent; }
    placessidebar list:backdrop {
      background-color: transparent; }

.sidebar-pane, .sidebar-pane .bottom-bar {
  background-color: #191a1f; }
.sidebar-pane .bottom-bar button {
  background-color: transparent;
  background-image: none;
  border-color: transparent;
  box-shadow: inset 0 1px rgba(255, 255, 255, 0);
  text-shadow: none;
  -gtk-icon-shadow: none; }
  .sidebar-pane .bottom-bar button label {
    color: #98abb2; }
  .sidebar-pane .bottom-bar button .view, .sidebar-pane .bottom-bar button iconview {
    background-color: transparent; }

/*****************
 * GtkSpinButton *
 *****************/
spinbutton {
  font-feature-settings: "tnum"; }
  spinbutton:not(.vertical) {
    padding: 0;
    border-spacing: 0;
    /* :not here just to bump specificity above that of the list button styling */ }
    spinbutton:not(.vertical) > text, .osd spinbutton:not(.vertical) > text {
      min-width: 28px;
      margin: 0;
      background: none;
      background-color: transparent;
      border: none;
      border-radius: 0;
      box-shadow: none;
      padding: 6px; }
      spinbutton:not(.vertical) > text:backdrop:disabled, .osd spinbutton:not(.vertical) > text:backdrop:disabled {
        background-color: transparent; }
/* ... */

